# YonseiAutoML

./: .gitignore  Dockerfile  README.md  api_test.py  api_test_network.py  api_test_opt.py  best_structure.txt  cli_test.sh  install_issue.txt  pyproject.toml  requirements.txt  requirements_backup_20251105_2317.txt  requirements_backup_20251111_2007.txt
SuperNet/logs/: exp1-seed-42.txt
demo_site/: settings.py
demo_site/SuperNet/logs/: exp1-seed-42.txt
demo_site/automlapp/: apps.py  urls.py  views.py
demo_site/automlapp/templates/automlapp/: data.html  home.html  index.html  network.html  optimization.html  total.html
demo_site/demo_site/: settings.py  urls.py
demo_site/logs/fxp_imagenet/: tmp_config_mobilenet_2bit.yml
demo_site/static/css/: style.css
demo_site/static/tmp/: dsbn_convert_result.json  dsbn_train_result.json
docs/en/: README.md  SUMMARY.md
docs/en/api-references/: ysautoml.network.fewshot.md  ysautoml.network.zeroshot.md  ysautoml.optimization.fxp.md  ysautoml.optimization.mtlloss.md
docs/en/api-references/ysautoml.data/: README.md  ysautoml.data.dsbn.md  ysautoml.data.dualbn.md  ysautoml.data.fyi.md
docs/en/api-references/ysautoml.data.fyi/: README.md
docs/en/api-references/ysautoml.network/: README.md  ysautoml.network.fewshot.md  ysautoml.network.oneshot.md  ysautoml.network.zeroshot.md
docs/en/api-references/ysautoml.optimization/: README.md  ysautoml.optimization.fxp.md  ysautoml.optimization.losssearch.md  ysautoml.optimization.mtlloss.md
docs/en/get-started/: get-started.md  overview.md
network_utils/mobilenetv2/: modeling_supernet.py
optim_utils/: supernet_train_imagenet.py
tb_logs/supernet/exp1/: events.out.tfevents.1757612247.d63c8bd87808.345842.0
ysautoml/: __init__.py
ysautoml/cli/: main.py
ysautoml/data/: imagenet_datasets.py
ysautoml/data/dsbn/: __init__.py  api.py  cli.py  parser.py
ysautoml/data/dsbn/engines/: dsbn_impl.py  trainer.py
ysautoml/data/fyi/: (x)main.py  (x)main_DM.py  __init__.py  api.py  cli.py  parser.py  utils.py
ysautoml/data/fyi/engines/: dm_impl.py  dsa_impl.py
ysautoml/network/exps/NAS-Bench-201-algos/: train_fairnas.py  train_fsnas.py
ysautoml/network/exps/NAS-Bench-201-algos/benchmark_data/: imagenet_valids.pkl  kendal_320_idx.pkl
ysautoml/network/exps/NAS-Bench-201-algos/utils/: LR_scheduler.py  get_strucs.py
ysautoml/network/exps/NAS-Bench-201-algos/valid_accs/: spos_dynamic.pkl  tmp_epochs_1_mom_0.9_wd_0.0005.pkl
ysautoml/network/fewshot/: __init__.py
ysautoml/network/fewshot/mobilenet/: __init__.py  api.py
ysautoml/network/fewshot/mobilenet/Search/: evol_search.py
ysautoml/network/fewshot/mobilenet/engines/: supernet_evol_search.py  supernet_train_decom_impl.py  supernet_train_impl.py
ysautoml/network/fewshot/mobilenet/models/: OneShot.py  OneShot_decom.py  OneShot_decom_non.py  cnn.py
ysautoml/network/fewshot/mobilenet/utils/: evaluator.py
ysautoml/network/logs/dynas_test/: events.out.tfevents.1761749773.d63c8bd87808.26480.0  events.out.tfevents.1762328990.d63c8bd87808.955.0
ysautoml/network/mobilenetv2/: modeling_layers.py
ysautoml/network/oneshot/: __init__.py  api.py
ysautoml/network/oneshot/engines/: dynas_train_impl.py  train_spos.py
ysautoml/network/oneshot/engines/benchmark_data/: cifar100_valids.pkl  cifar10_valids.pkl
ysautoml/network/oneshot/engines/utils/: get_num_params.py
ysautoml/network/oneshot/scripts/: train_spos.py
ysautoml/network/oneshot/xautodl/models/cell_searchs/: search_model_random.py
ysautoml/network/oneshot/xautodl/utils/: evaluation_utils.py
ysautoml/network/zeroshot/autoformer/: __init__.py  api.py  cli.py  parser.py
ysautoml/network/zeroshot/mobilenetv2/: __init__.py  api.py
ysautoml/network/zeroshot/mobilenetv2/engines/ImageNet_MBV2/: train_image_classification.py
ysautoml/optimization/fxp/: __init__.py  api.py
ysautoml/optimization/fxp/engines/: train.py  train_ImageNet.py
ysautoml/optimization/fxp/engines/configs/: mobilenet_2bit.yml  mobilenet_ori.yml
ysautoml/optimization/fxp/engines/models/: __init__.py  mobile_KSQ_3.py  mobilenet_ori.py  mobilenet_ste.py  mobilenet_ste_1.py  modules_0121.py  modules_1119.py  modules_1123.py  modules_DAQ_version_notsymme_240530.py  modules_PWF.py  modules_fcquant.py  modules_fcquant_legacy.py  modules_legacy_0408.py
ysautoml/optimization/fxp/engines/utils/: config.py
ysautoml/optimization/losssearch/: __init__.py  api.py
ysautoml/optimization/losssearch/engines/: loss.py  main.py  main_original.py  model.py
ysautoml/optimization/mtl/: README.md  __init__.py  api.py
ysautoml/optimization/mtl/LibMTL/: config.py
ysautoml/optimization/mtl/LibMTL/weighting/: AMTL.py  GeMTL.py  LSBwD.py  LSBwoD.py
ysautoml/optimization/mtl/examples/nyusp/: __init__.py  api.py
ysautoml/optimization/mtl/examples/nyusp/engines/: create_dataset.py  main.py  run.sh  run_impl.py
