[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ysautoml"
version = "0.1.0"
description = "Yonsei CVLab AutoML Utilities (Optimization, NAS, Data)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="CVLab Yonsei"}]

dependencies = [
  "torch>=1.10",
  "torchvision>=0.11",
  "scipy>=1.7",
  "pyyaml"
]

[project.scripts]
ysautoml = "ysautoml.cli.main:app"   # 단일 진입점 (typer/click 추천)
