[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ysautoml"
version = "0.1.0"
description = "Yonsei CVLab AutoML Utilities (Optimization, NAS, Data)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="CVLab Yonsei"},
    {name="Hyunju Lee", email="hyunjulee@yonsei.ac.kr"},
]
license = {text = "MIT"} 
keywords = ["AutoML", "DeepLearning", "NAS"] 
classifiers = [ 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "absl-py==2.3.1",
  "anyio==4.5.2",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "asgiref==3.8.1",
  "asttokens==3.0.0",
  "async-lru==2.0.4",
  "attrs==25.3.0",
  "babel==2.17.0",
  "backcall==0.2.0",
  "backports.zoneinfo==0.2.1",
  "beautifulsoup4==4.13.5",
  "bleach==6.1.0",
  "cachetools==5.5.2",
  "certifi==2025.8.3",
  "cffi==1.17.1",
  "chardet==3.0.4",
  "charset-normalizer==3.4.3",
  "cloudpickle==3.1.2",
  "comm==0.2.3",
  "cycler==0.12.1",
  "debugpy==1.8.16",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "distro==1.4.0",
  "Django==4.2.26",
  "easydict==1.10",
  "einops==0.8.1",
  "exceptiongroup==1.3.0",
  "executing==2.2.1",
  "fastjsonschema==2.21.2",
  "filelock==3.16.1",
  "fonttools==4.57.0",
  "fqdn==1.5.1",
  "fsspec==2025.3.0",
  "google-auth==2.40.3",
  "google-auth-oauthlib==0.4.6",
  "graphviz==0.20.3",
  "grpcio==1.70.0",
  "h11==0.16.0",
  "hf-xet==1.1.10",
  "horovod==0.28.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==0.34.4",
  "idna==3.10",
  "imageio==2.35.1",
  "importlib_metadata==8.5.0",
  "importlib_resources==6.4.5",
  "ipykernel==6.29.5",
  "ipython==8.12.3",
  "ipywidgets==8.1.7",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "joblib==1.4.2",
  "json5==0.12.1",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2023.12.1",
  "jupyter==1.1.1",
  "jupyter-console==6.6.3",
  "jupyter-events==0.10.0",
  "jupyter-lsp==2.3.0",
  "jupyter_client==8.6.3",
  "jupyter_core==5.8.1",
  "jupyter_server==2.14.2",
  "jupyter_server_terminals==0.5.3",
  "jupyterlab==4.3.8",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_server==2.27.3",
  "jupyterlab_widgets==3.0.15",
  "kiwisolver==1.4.7",
  "lazy_loader==0.4",
  "Markdown==3.7",
  "MarkupSafe==2.1.5",
  "matplotlib==3.5.3",
  "matplotlib-inline==0.1.7",
  "mistune==3.1.4",
  "nbclient==0.10.1",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "networkx==3.1",
  "notebook==7.3.3",
  "notebook_shim==0.2.4",
  "numpy==1.22.4",
  "oauthlib==3.3.1",
  "opencv-python==4.7.0.72",
  "overrides==7.7.0",
  "packaging==25.0",
  "pandas==1.3.5",
  "pandocfilters==1.5.1",
  "parso==0.8.5",
  "pexpect==4.9.0",
  "pickleshare==0.7.5",
  "pillow==10.4.0",
  "pkgutil_resolve_name==1.3.10",
  "platformdirs==4.3.6",
  "prometheus_client==0.21.1",
  "prompt_toolkit==3.0.52",
  "protobuf==3.20.3",
  "psutil==7.1.3",
  "ptflops==0.7",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycparser==2.23",
  "Pygments==2.19.2",
  "PyGObject==3.36.0",
  "pyparsing==3.1.4",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==3.3.0",
  "pytz==2025.2",
  "PyWavelets==1.4.1",
  "PyYAML==6.0.3",
  "pyzmq==27.1.0",
  "referencing==0.35.1",
  "requests==2.32.4",
  "requests-oauthlib==2.0.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rpds-py==0.20.1",
  "rsa==4.9.1",
  "safetensors==0.5.3",
  "scikit-image==0.21.0",
  "scikit-learn==1.0.2",
  "scipy==1.10.1",
  "Send2Trash==1.8.3",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "sqlparse==0.5.3",
  "stack-data==0.6.3",
  "tensorboard==2.11.0",
  "tensorboard-data-server==0.6.1",
  "tensorboard-plugin-wit==1.8.1",
  "tensorboardX==2.6.2.2",
  "terminado==0.18.1",
  "thop==0.1.1.post2209072238",
  "threadpoolctl==3.5.0",
  "tifffile==2023.7.10",
  "timm==0.9.2",
  "tinycss2==1.2.1",
  "tomli==2.2.1",
  "torch==1.9.1+cu111",
  "torchaudio==0.9.1",
  "torchvision==0.10.1+cu111",
  "tornado==6.4.2",
  "tqdm==4.65.0",
  "traitlets==5.14.3",
  "types-python-dateutil==2.9.0.20241206",
  "typing_extensions==4.13.2",
  "uri-template==1.3.0",
  "urllib3==2.2.3",
  "wcwidth==0.2.13",
  "webcolors==24.8.0",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "Werkzeug==3.0.6",
  "widgetsnbextension==4.0.14",
  "zipp==3.20.2"
]

[project.urls] 
"Homepage" = "https://github.com/cvlab-yonsei/YonseiAutoML"
"Bug Tracker" = "https://github.com/cvlab-yonsei/YonseiAutoML/issues"

[project.scripts]
ysautoml = "ysautoml.cli.main:app"


[tool.setuptools.packages.find]
where = ["."]
include = ["ysautoml*"]